// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Script Generated Modules > Properly generates documentation for modules generated entirely from script (Editor TS Bindings) > # Of Files Generated 1`] = `8`;

exports[`Script Generated Modules > Properly generates documentation for modules generated entirely from script (Editor TS Bindings) > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: generated-module
    items:
    - name: generated-module
      href: generated-module/generated-module.md
    - name: generated-module Changelog
      href: generated-module/changelog.md
    - name: ScriptGeneratedEnum
      href: generated-module/ScriptGeneratedEnum.md
    - name: ScriptGeneratedClass
      href: generated-module/ScriptGeneratedClass.md
"
`;

exports[`Script Generated Modules > Properly generates documentation for modules generated entirely from script (Editor TS Bindings) > msdocs/scriptapi/generated-module/ScriptGeneratedClass.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: generated-module.ScriptGeneratedClass Class
description: Contents of the generated-module.ScriptGeneratedClass class.
---
# ScriptGeneratedClass Class

A script generated class

## Properties

### **testProperty**
\`testProperty: string | undefined;\`

A script generated property

Type: *string | undefined*

Notes:
  - This property can't be used in read-only mode.

## Methods
- [testFunctionWithTSDocComments](#testfunctionwithtsdoccomments)

### **testFunctionWithTSDocComments**
\`
testFunctionWithTSDocComments(tsdocParam: number, msdocParam: number): boolean
\`

A script generated function with doc text defined in TSDoc comments

#### **Parameters**
- **tsdocParam**: *number*
  
  Param comment from TSDoc
- **msdocParam**: *number*
  
  This overwrites the TSDoc for msdocParam with an info.json file's description

**Returns** *boolean* - This is a return comment defined in info.json
  
Notes:
- This function can't be called in read-only mode.
- This function can throw errors.
  - Throws comment in TSDocs
"
`;

exports[`Script Generated Modules > Properly generates documentation for modules generated entirely from script (Editor TS Bindings) > msdocs/scriptapi/generated-module/ScriptGeneratedEnum.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: generated-module.ScriptGeneratedEnum Enumeration
description: Contents of the generated-module.ScriptGeneratedEnum enumeration.
---
# ScriptGeneratedEnum Enumeration

A script generated enum

## Constants
### **First**
\`First = first\`
### **Second**
\`Second = second\`
"
`;

exports[`Script Generated Modules > Properly generates documentation for modules generated entirely from script (Editor TS Bindings) > msdocs/scriptapi/generated-module/TypeAliasWithInfoJsonComments.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: generated-module.TypeAliasWithInfoJsonComments Type Alias
description: Contents of the generated-module.TypeAliasWithInfoJsonComments type alias.
---
# TypeAliasWithInfoJsonComments Type Alias

This overwrites the TSDoc from TypeAliasWithInfoJsonComments with an info.json file's description

## Declaration
\`export type TypeAliasWithInfoJsonComments = {
    id: string;
};\`
"
`;

exports[`Script Generated Modules > Properly generates documentation for modules generated entirely from script (Editor TS Bindings) > msdocs/scriptapi/generated-module/TypeAliasWithTSDocComments.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: generated-module.TypeAliasWithTSDocComments Type Alias
description: Contents of the generated-module.TypeAliasWithTSDocComments type alias.
---
# TypeAliasWithTSDocComments Type Alias

This doc text is extracted from TSDoc comments

## Declaration
\`export type TypeAliasWithTSDocComments = boolean | string;\`
"
`;

exports[`Script Generated Modules > Properly generates documentation for modules generated entirely from script (Editor TS Bindings) > msdocs/scriptapi/generated-module/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: generated-module Changelog
description: Changelog of the \`generated-module\` module
---
# \`generated-module\` Changelog

## Version Changes
- [1.0.0-beta](#100-beta)

## 1.0.0-beta
#### Added \`generated-module\` Module
"
`;

exports[`Script Generated Modules > Properly generates documentation for modules generated entirely from script (Editor TS Bindings) > msdocs/scriptapi/generated-module/generated-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: generated-module Module
description: Contents of the generated-module module
monikerRange: "=minecraft-bedrock-experimental"
---
# \`generated-module\` Module

> [!CAUTION]
> This module is still in pre-release.  It may change or it may be removed in future releases.

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "generated-module",
    "version": "1.0.0-beta"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.0.0-beta\`

## Enumerations
- [ScriptGeneratedEnum](ScriptGeneratedEnum.md)

# Type Aliases
- [TypeAliasWithInfoJsonComments](TypeAliasWithInfoJsonComments.md)
- [TypeAliasWithTSDocComments](TypeAliasWithTSDocComments.md)

## Classes
- [ScriptGeneratedClass](ScriptGeneratedClass.md)
"
`;

exports[`Script Generated Modules > Properly generates documentation for modules generated entirely from script (Editor TS Bindings) > typescript/generated-module@1.0.0-beta.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "generated-module",
 *   "version": "1.0.0-beta"
 * }
 * \`\`\`
 *
 */
/**
 * A script generated enum
 */
export declare enum ScriptGeneratedEnum {
    First = 'first',
    Second = 'second',
}

/**
 * This overwrites the TSDoc from TypeAliasWithInfoJsonComments
 * with an info.json file's description
 */
export type TypeAliasWithInfoJsonComments = {
    id: string;
};

/**
 * This doc text is extracted from TSDoc comments
 */
export type TypeAliasWithTSDocComments = boolean | string;

/**
 * A script generated class
 */
export declare class ScriptGeneratedClass {
    /**
     * @remarks
     * A script generated property
     *
     * This property can't be used in read-only mode.
     *
     */
    testProperty: string | undefined;
    /**
     * @remarks
     * A script generated function with doc text defined in TSDoc
     * comments
     *
     * This function can't be called in read-only mode.
     *
     * @param tsdocParam
     * Param comment from TSDoc
     * @param msdocParam
     * This overwrites the TSDoc for msdocParam with an info.json
     * file's description
     * @returns
     * This is a return comment defined in info.json
     * @throws
     * Throws comment in TSDocs
     */
    testFunctionWithTSDocComments(tsdocParam: number, msdocParam: number): boolean;
}
"
`;
